# backend

./: .env.example  .gitignore  LICENSE  manage.py  pyproject.toml
backend/: settings.py
shiki_oauth/: __init__.py  backend.py
